--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,17 +11,15 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+  <div align="center">
+    <%= will_paginate %>
+  </div>
+  <%= render 'article', obj: @articles %>
+  <div align="center">
+    <%= will_paginate %>
+  </div>
+
+
 </table>
 
 <br>
